# Westervelt-Simulation

./: README.md  pyproject.toml
app/: westervelt_lab.py
core/: __init__.py  explicite.py  numerics.py  postprocessing.py  semi_implicite.py  solver.py  splitting.py  stability_analysis.py  symbolics.py  validation.py
docs/: doc_1_txt
experiments/: README_analyse_schemas.md  __init__.py  analyse_fourier_explicite.py  analyse_fourier_semi_implicite.py  analyse_schemas.py  validate_manufactured_nikolic.py  validate_nikolic_manufactured.py  visualizations_analysis.py  westervelt_sim.py
heat_equation_test/experiments/: heat_equation_tests.ipynb  heat_sim.py
heat_equation_test/src/: heat_solver.py
heat_equation_test/tests/: test_heat.py
notebooks/: presentation_01.ipynb  test_solver.ipynb  test_solver_nikolic.ipynb
outputs/analysis/explicit-fourier-analysis/: analyse_fourier_explicite_amplification_dispersion_v1_metadata.json  analyse_fourier_explicite_amplification_vs_dispersion_v1_metadata.json  (+1 more)
outputs/figures/: example_trigono_v1_metadata.json
outputs/versioning_check/: version_test_v1_metadata.json  version_test_v2_metadata.json
src/: analysis.py  explicite.py  numerics.py  postprocessing.py  reformulation-auxiliaire.py  reformulation_auxiliaire.py  semi_implicite.py  solver.py  splitting.py  stability_analysis.py
tests/: test_consolidation.py  test_model_validation.py  test_scan_utils.py  test_symbolics.py  test_validation.py  test_westervelt.py
utils/: __init__.py  examples_utils.py  utils.py
(+15 files in other folders)
