[project]
name = "westervelt-simulation"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aquarel>=0.0.7",
    "ipykernel>=7.2.0",
    "ipywidgets==8.1.8",
    "matplotlib>=3.10.8",
    "numba>=0.64.0",
    "numpy>=2.4.2",
    "pandas-stubs~=2.3.3",
    "scipy>=1.17.1",
    "scipy-stubs~=1.17.1",
    "streamlit>=1.54.0",
    "sympy==1.14.0",
    "tqdm>=4.67.3",
]
